build system and a few content changes

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: Hallucinations of Grandeur
-description: A short description of this site.
+title: Milewide | Home
+description: My little personal domain on the web... Surprised you even care.
 keywords: chris hamant,blog,html,css,javascript,programming,web,development,too many keywords
 change_frequency: daily
 priority: 1.0
