few things - migrated to headjs, setup disqus, solidified license and added some meta fles

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: landing
 title: Milewide | Home
 description: My little personal domain on the web... Surprised you even care.
 keywords: chris hamant,blog,html,css,javascript,programming,web,development,too many keywords
