fixing archive's layout

--- a/archive.html
+++ b/archive.html
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: landing
 title: Milewide | Archive
 description: Milewide - An archive of articles and blog posts written by Chris Hamant.
 keywords: chris hamant,blog,posts,archive
